--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <a class="link-button" target="_blanck" href="https://www.linkedin.com/in/mojammel-haque-bab822158/">HIRE ME</a>
     </div>
     <div class="half-width">
-        <img src="C:\complete-web\img\me.jpg" alt="">
+        <img src="img/me.jpg" alt="">
     </div>
     </section>
 
     <section class="dream-area">
         <div class="half-width">
-            <img src="C:\complete-web\img\me2.jpg" alt="">
+            <img src="img/me2.jpg" alt="">
         </div>
 
         <div class="half-width">
